<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    android:padding="20dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textColor="@android:color/black"
        android:text="@string/setting_internval_string" />

    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
             android:textColor="@android:color/black"
            android:text="@string/internval_string" />

        <EditText
            android:id="@+id/interval_edit"
             android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/setting_internval_prompt_string"
            android:inputType="number"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/sure_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:background="@color/green"
           android:padding="10dp"
            android:text="@string/sure_string"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
         <Button
             android:id="@+id/quit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
             android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/green"
            android:text="@string/quit_string"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>