<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical"
    android:id="@+id/fragment_content"
    tools:context=".MainFragment" >   

    <TextView
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/theory_string"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/editor_bg"
        android:gravity="center"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/phone_num_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:hint="@string/input_phone_number_string"
            android:inputType="phone"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/start_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@color/green"
        android:text="@string/start_btn_string"
        android:textColor="@android:color/white"
       android:padding="10dp"
        android:textSize="20sp" />
    <TextView
        android:id="@+id/number_text"
        android:layout_margin="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_string"
        android:textColor="@android:color/white"
        android:textSize="18sp" />

</LinearLayout>