<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <LinearLayout
            android:id="@+id/interval_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:text="@string/setting_internval_string"
                android:textColor="@android:color/black"
                android:textSize="16dp" />
             <TextView
                 android:id="@+id/interval_time_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="20"
                android:textColor="@android:color/black"
                android:gravity="right"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1sp"
            android:background="@color/line" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/save_number_string"
                android:textColor="@android:color/black"
                android:textSize="16dp" />

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@drawable/switch_control"
                android:button="@null" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/about_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_string"
                android:textColor="@android:color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />

        <LinearLayout
            android:id="@+id/exit_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/exit_string"
                android:textColor="@android:color/black"
                android:textSize="16dp" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/line" />
    </LinearLayout>
</LinearLayout>